[package]
name = "check-phase2"
version = "0.1.0"
authors = ["Joshua Laughner <jlaugh@caltech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
float-cmp = "0.9.0"

[dependencies.netcdf]
version = "0.6.1"
#features = ["static"]
